--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rayon = "1.8"       # Para paralelismo de alto nivel
 chrono = "0.4"       # Para medir tiempos
 log = "0.4"
 env_logger = "0.11"
+num_cpus = "1.17.0"
 
 [dev-dependencies]
 criterion = "0.5"
